.k8s/importer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: importer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: importer
  template:
    metadata:
      labels:
        component: importer
    spec:
      containers:
        - name: importer
          image: marecica2/dwh-importer
          ports:
            - containerPort: 3001
