.k8s/migrator-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: migrator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: migrator
  template:
    metadata:
      labels:
        component: migrator
    spec:
      restartPolicy: Never
      containers:
        - name: migrator
          image: marecica2/dwh-migrator
