.k8s/migrator-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: migrator-pod
spec:
  restartPolicy: OnFailure
  containers:
    - name: migrator
      image: marecica2/dwh-migrator
