.k8s/olap-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olap-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: olap
  template:
    metadata:
      labels:
        component: olap
    spec:
      containers:
        - name: olap
          image: marecica2/dwh-olap
          ports:
            - containerPort: 3001
