.k8s/react-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dwh-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: marecica2/dwh-web-dwh
          ports:
            - containerPort: 3000
