.k8s/importer-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: importer-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: importer
  ports:
    - port: 3001
      targetPort: 3001
